--- a/fedi-fetcher/fedi-fetcher.service
+++ b/fedi-fetcher/fedi-fetcher.service
@@ -7,10 +7,10 @@ Type=simple
 User=fedi-fetcher
 Group=fedi-fetcher
 
-ExecStart=/usr/bin/fedi-fetcher -c=/etc/fedi-fetcher/config.json
+ExecStart=/usr/bin/fedi-fetcher -c /etc/fedi-fetcher/config.json --lock-file /run/fedi-fetcher/.lock --state-dir /var/lib/fedi-fetcher
 
-WorkingDirectory=~
-ReadWritePaths=/var/lib/fedi-fetcher
+RuntimeDirectory=fedi-fetcher
+StateDirectory=fedi-fetcher
 ConfigurationDirectory=fedi-fetcher
 
 ProtectSystem=strict
