--- a/xwayland-satellite-git/PKGBUILD
+++ b/xwayland-satellite-git/PKGBUILD
@@ -4,7 +4,7 @@
 _pkgname=xwayland-satellite
 pkgname="$_pkgname-git"
 pkgver=0.2.r9.g601223d
-pkgrel=1
+pkgrel=2
 pkgdesc="Xwayland outside your Wayland - git version"
 arch=(x86_64)
 url="https://github.com/Supreeeme/$_pkgname"
@@ -24,8 +24,9 @@ makedepends=(
 provides=($_pkgname)
 conflicts=($_pkgname)
 options=(!debug)
-source=(git+$url.git)
-b2sums=(SKIP)
+source=(git+$url.git xwayland-satellite.service)
+b2sums=('SKIP'
+        '408c93c7c12e359e0ba48c08aea3f8a132452bcf2ad400a029115eb5fb4897e07e286bb9191d50835a26404ccf6496aeeb81d232d6222ae1af02750d0e6c4a39')
 
 pkgver() {
   cd $_pkgname
@@ -49,5 +50,6 @@ build() {
 }
 
 package() {
-  install -vDm755 $_pkgname/target/release/$_pkgname -t "$pkgdir"/usr/bin/
+  install -Dm644 "$srcdir"/$_pkgname.service -t "$pkgdir"/usr/lib/systemd/user/
+  install -Dm755 $_pkgname/target/release/$_pkgname -t "$pkgdir"/usr/bin/
 }
