upgpkg: fedi-fetcher 7.0.5-2
fedi-fetcher v7.0.5

--- a/fedi-fetcher/example-config.json
+++ b/fedi-fetcher/example-config.json
@@ -1,4 +1,5 @@
 {
+  "log-level": "WARNING",
   "access-token": "Your access token",
   "server": "your.mastodon.server",
   "home-timeline-length": 200,
