upgpkg: fedi-fetcher 7.1.5-1
upstream release

v7.1.5

--- a/fedi-fetcher/fedi-fetcher.service
+++ b/fedi-fetcher/fedi-fetcher.service
@@ -7,7 +7,7 @@ Type=simple
 User=fedi-fetcher
 Group=fedi-fetcher
 
-ExecStart=/usr/bin/fedi-fetcher -c /etc/fedi-fetcher/config.json --lock-file /run/fedi-fetcher/.lock --state-dir /var/lib/fedi-fetcher
+ExecStart=/usr/bin/fedi-fetcher -c /etc/fedi-fetcher/config.json --lock-file /run/fedi-fetcher/.lock --state-dir /var/lib/fedi-fetcher --log-format '%(message)s'
 
 RuntimeDirectory=fedi-fetcher
 StateDirectory=fedi-fetcher
