--- a/gmlgcd/PKGBUILD
+++ b/gmlgcd/PKGBUILD
@@ -1,22 +1,25 @@
 # Maintainer: Sir-Photch <sir-photch at posteo dot me>
 
 pkgname=gmlgcd
-pkgver=1.4
+pkgver=2.0
 pkgrel=1
 pkgdesc='The gemlog comment daemon'
 arch=('x86_64' 'aarch64')
-url='https://github.com/Sir-Photch/gmlgcd'
+url='https://sr.ht/~chrs/gmlgcd'
 license=('AGPL-3.0-or-later')
-makedepends=('meson')
+makedepends=('meson' 'scdoc')
 checkdepends=('fish')
 depends=('libevent' 'libbsd' 'confuse')
 
 backup=('etc/gmlgcd.conf')
 source=(
-	"$pkgname-$pkgver.tar.gz::https://github.com/Sir-Photch/$pkgname/archive/refs/tags/v$pkgver.tar.gz"
+	"$pkgname-$pkgver.tar.gz::https://git.sr.ht/~chrs/$pkgname/archive/$pkgver.tar.gz"
+	"$pkgname-$pkgver.tar.gz.asc::https://git.sr.ht/~chrs/$pkgname/archive/$pkgver.tar.gz.asc"
 	"sysusers-gmlgcd.conf"
 )
-sha256sums=('996e33564021219b29925ab1fe852c2c989bd395eb453774032bfeb2ed3d05a9'
+validpgpkeys=(10F1CC925057D456798EBF9C1B3EB6FE2D338B4A)
+sha256sums=('a85e3560d92652965968ecb70f27282aa37d5147d4d9a919fd0cd1d3467ce7e7'
+            'SKIP'
             'e071442fbd90cf80ce528344d4849f6372c8e75d236f3dca9a56c03f3586d92d')
 
 prepare() {
@@ -44,7 +47,8 @@ package() {
 	install -Dm 644 "$srcdir/sysusers-gmlgcd.conf" "$pkgdir/usr/lib/sysusers.d/gmlgcd.conf"
 
 	install -Dm 644 gmlgcd.conf -t "$pkgdir/etc"
+	install -Dm 644 help-template.gmi -t "$pkgdir/etc/gmlgcd.conf.d"
 
 	install -Dm 644 template.gmi README.md -t "$pkgdir/usr/share/doc/$pkgname"
-	install -Dm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
+	install -Dm 644 COPYING -t "$pkgdir/usr/share/licenses/$pkgname"
 }
